syntax = "proto3";

package todo;

option go_package = "/proto";

service TodoService {
    rpc AddTodo (TodoItem) returns (TodoResponse);
    rpc ListTodos (Empty) returns (TodoList);
    rpc MarkCompleted (TodoRequest) returns (TodoResponse);
    rpc DeleteTodo (TodoDeleteRequest) returns (TodoResponse);
}

message TodoItem {
    string id = 1;
    string title = 2;
    bool completed = 3;
}

message TodoRequest {
    string id = 1;
    bool completed = 2;
}

message TodoDeleteRequest {
    string id = 1;
}

message TodoResponse {
    int32 message = 1;
}

message TodoList {
    repeated TodoItem todos = 1;
}

message Empty {}